<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/general_layout">
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:clickable="false"
        android:gravity="bottom">
        <Button
            style="@style/buttons"
            android:layout_width="100dp"
            android:text="@string/deleteBtn"
            android:id="@+id/deleteButton"
        />
        <Button
            style="@style/buttons"
            android:layout_alignParentRight="true"
            android:text="@string/saveBtn"
            android:id="@+id/saveButton"
        />
    </RelativeLayout>
    <LinearLayout android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
        android:layout_margin="5dp"
        android:longClickable="false">
        <TextView
            style="@style/txtView"
            android:text="@string/pa_name"
            android:id="@+id/textView1"
        />
        <EditText
            style="@style/editTxt"
            android:id="@+id/editText"
         />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_gravity="center"
        android:background="@android:drawable/dialog_holo_light_frame" android:layout_margin="5dp">
        <TextView
            style="@style/txtView"
            android:text="@string/frequency"
            android:id="@+id/textView3"
        />
        <RadioGroup
            android:id="@+id/radioFrequency"
            style="@style/radio_grp">
            <RadioButton
                style="@style/radio_btns"
                android:text="@string/random"
                android:id="@+id/random"
            />
            <RadioButton
                style="@style/radio_btns"
                android:id="@+id/daily"
                android:text="@string/daily"
            />
            <RadioButton
                style="@style/radio_btns"
                android:text="@string/weekly"
                android:id="@+id/weekly"
            />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_gravity="center" android:layout_margin="5dp"
        android:background="@android:drawable/dialog_holo_light_frame">
        <TextView
            style="@style/txtView"
            android:text="@string/importance"
            android:id="@+id/textView4"
        />
        <SeekBar
            style="@style/seekBar"
            android:id="@+id/seekBar"
        />
    </LinearLayout>

</LinearLayout>